# booksparser-telegram-bot

./: .gitignore  README.md  books_export.csv  books_export.json  check_databases.py  create_books_table.sql  create_dbeaver_report.sql  docker-compose.yml  export_for_dbeaver.sql  export_to_postgresql.py  postgresql_queries.sql  requirements.txt  start-techpark.bat  start-tehnoparser.bat
backup/tehnoparser_backup_20250928/: PROJECT_STATUS.md  RESTORE_PROJECT.bat  postgresql_backup.json
backup/tehnoparser_backup_20250928/project_files/: Dockerfile  README.md  README_BOOKS_PARSER.md  check_db_structure.py  create_postgresql_table.sql  dbeaver_queries.sql  export_books_to_table.py  postgresql_parser.py  techpark_api.py  techpark_parser.py
backup/tehnoparser_backup_20250928/project_files/mcp-server-books/: Dockerfile  pyproject.toml
backup/tehnoparser_backup_20250928/project_files/nginx/: Dockerfile
mcp-server-books/: __main__.py
nginx/: nginx.conf
public/: index.html
telegram_moderator_bot/: Dockerfile  README.md  docker-compose.yml  env.example  init.sql  main.py  requirements.txt  start.bat
telegram_moderator_bot/src/: bot.py  config.py  database.py  filters.py  parser_integration.py
